syntax = "proto3";

message GetInvitesRequest {
  int64 timerId = 1;
  optional string nextPageToken = 2;

  message Response {
    string inviteCode = 1;
    string nextPageToken = 3;
  }
}