syntax = "proto3";

import "/timemates/timers/types/Timer.proto";

option java_package = "org.timemates.api.timers.requests";

message JoinTimerByInviteCodeRequest {
  string inviteCode = 1;

  message Response {
    Timer timer = 1;
  }
}