syntax = "proto3";

option java_package = "io.timemates.api.timers.requests.members";

message KickMemberRequest {
  int64 timerId = 1;
  int64 userId = 2;
}